Fixed makefile and Update code for chat_app

--- a/07-Mini-Project-Chat-Application/Makefile
+++ b/07-Mini-Project-Chat-Application/Makefile
@@ -2,7 +2,7 @@
 
 # Compiler and tools
 CC = gcc
-CFLAGS = -pthread -Wall -g -I$(INC_DIR)
+CFLAGS = -lpthread -Wall -g -I$(INC_DIR)
 
 # Directory structure
 CUR_DIR := .
