Updated log process

--- a/12-Final-Project-Sensor-Monitoring-System/Makefile
+++ b/12-Final-Project-Sensor-Monitoring-System/Makefile
@@ -47,7 +47,7 @@ valgrind-log: $(TARGET)
 
 # Clean all compiled files
 clean:
-	rm -rf $(OBJ_DIR) $(BIN_DIR)
-	rm -rf $(LOG_DIR)
-
+	@rm -rf $(OBJ_DIR) $(BIN_DIR) $(LOG_DIR)
+	@rm -rf logfifo
+	
 .PHONY: all clean valgrind-check valgrind-log
